--- a/index.html
+++ b/index.html
@@ -6,11 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS</title>
 
-    <link rel="stylesheet" href="style.css">
+    <!-- eksternal css -->
+    <!-- <link rel="stylesheet" href="style.css"> -->
+
+        <!-- internal css -->
+<style>
+
+h1{
+
+color:red;
+font-size:px;
+font-weight: 400 ;
+
+}
 
 
 
-    
+
+
+
+
+
+</style>
+
+
+
+
 </head>
 <body>
     
