--- a/index.html
+++ b/index.html
@@ -7,27 +7,9 @@
     <title>CSS</title>
 
     <!-- eksternal css -->
-    <!-- <link rel="stylesheet" href="style.css"> -->
+    <link rel="stylesheet" href="style.css">
 
         <!-- internal css -->
-<style>
-
-h1{
-
-color:red;
-font-size:px;
-font-weight: 400 ;
-
-}
-
-
-
-
-
-
-
-
-</style>
 
 
 
@@ -37,7 +19,7 @@ font-weight: 400 ;
     
 <h1>Introduction</h1>
 
-<p>This is the first class of CSS.</p>
+<p style="font-size:24px">This is the first class of CSS.</p>
 <p>Second paragraph</p>
 
 
