--- a/index.html
+++ b/index.html
@@ -17,9 +17,20 @@
 </head>
 <body>
     
-<h1>Introduction</h1>
+<h1 id="head1" class="title">Introduction to CSS</h1>
 
-<p style="font-size:24px">This is the first class of CSS.</p>
+<h1 id="head2" class="title">Head 2</h1>
+
+<p>This is the first class of CSS.</p>
+
+<h3 class="description">Lorem ipsum dolor sit amet</h3>
+
+<p class="description">Lorem ipsum dolor sit amet.</p>
+<p class="description">Lorem ipsum dolor sit amet.</p>
+<p class="description">Lorem ipsum dolor sit amet.</p>
+<p>Lorem ipsum dolor sit amet.</p>
+<p>Lorem ipsum dolor sit amet.</p>
+
 <p>Second paragraph</p>
 
 
