--- a/index1.html
+++ b/index1.html
@@ -23,11 +23,22 @@
 <p>Lorem ipsum dolor sit amet.</p>
 <p>Lorem ipsum dolor sit amet.</p>
 
+<br>
+<br>
+<hr>
+<div>
+<a href="https://google.com/">Google</a>
+</div>
+<br>
 
-
-
-
-
+<hr>
+<br>
+<ul>
+   <li class="list">Lorem ipsum dolor sit amet.</li>
+   <li class="list">Lorem ipsum dolor sit amet.</li>
+   <li class="list">Lorem ipsum dolor sit amet.</li>
+   <li class="list">Lorem ipsum dolor sit amet.</li>
+</ul>
 
 
 
