--- a/display.html
+++ b/display.html
@@ -9,13 +9,15 @@
 </head>
 <body>
     
-<h1>Display <span> Property</span></h1>
+<h1>Display  Property</h1>
 
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, nulla nobis. Molestias mollitia soluta vero.</p>
 
 
 
-
+<span id="h1">Head1</span>
+<span id="h2">Head2</span>
+<span id="h3">Head3</span>
 
 
 
