--- a/position.html
+++ b/position.html
@@ -4,20 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Position</title>
     <link rel="stylesheet" href="position.css">
 </head>
 <body>
     
 
+    <h1>Position</h1>
+    <div id="container">
+        <div id="first">Box1</div>
 
-
-
-
-
-
-
-
+    </div>
+<div id="second">Box2</div>
+<div id="third">Box3</div>
 
 
 
