--- a/opacity.html
+++ b/opacity.html
@@ -25,7 +25,8 @@
     Anlatır özlemini bana derinden <br>
     Yanan alnınla, terleyen avuçların <br>
     Alevler taşarken gözbebeklerinden <br>
-    Yakar degdigi yeri parmak uçların br
+    Yakar degdigi yeri parmak uçların <br>
+                              Ümit Yaşar Oğuzcan
 
 
 
